--- a/produit/package.json
+++ b/produit/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.js" 
+    "start": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.30.0"
   }
 }
