--- a/produit/package.json
+++ b/produit/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
+    "firebase-admin": "^11.6.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.30.0"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
